extra space on preview fixed

--- a/assets/components/discuss/themes/modx/css/index.css
+++ b/assets/components/discuss/themes/modx/css/index.css
@@ -343,7 +343,7 @@ ul.dis-list li h3 {
 	}
 
 .dis-form h1 {
-    margin: 25px 25px 0 25px;
+    margin: 5px 25px 0 25px;
 	}
 	
 .dis-list li h1 {
